Fix spacing within the TOC (hopefully), fix the .figure bug that resulted from the last commit
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2045 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/contrib/layout/wip/susebooks.css
+++ b/contrib/layout/wip/susebooks.css
@@ -1003,7 +1003,7 @@ em, i, .guimenu {
     font-style: normal; /* Don't use italics within italics... */
 }
 
-strong, b, #_content .authorgroup-label, .productname, .productnumber {
+strong, b, #_content .authorgroup-label, .productname, .productnumber, .toc-title {
     font-weight: 600;
 }
 
@@ -1021,7 +1021,7 @@ strong, b, #_content .authorgroup-label, .productname, .productnumber {
     padding: 3px 10px 5px 10px;
     margin: 24px 0 0;
 }
-#_content .abstract p {
+#_content .abstract p, .toc-title {
     color: #333;
 }
 
@@ -1210,12 +1210,18 @@ strong, b, #_content .authorgroup-label, .productname, .productnumber {
     color: #000;
 }
 
-#_content .variablelist dd, #_content .glossary dd {
+#_content .toc dt {
+    margin-bottom: 5px;
+} 
+
+#_content .variablelist dd, #_content .glossary dd, #_content .toc dd {
     margin: 0 0 17px 0;
     padding: 0 0 0 30px;
 }
 
-#_content .toc dd {
+#_content .list-of-figures dl, #_content .list-of-tables dl,
+#_content .list-of-examples dl, #_content .list-of-procedures dl,
+#_content .list-of-equations dl {
     margin: 5px 0 17px 0;
     padding: 0 0 0 30px;
 }
@@ -1272,7 +1278,7 @@ obnoxious image handling:
     display: block; /* inline images weirdly have some whitespace below them, thus block'ing */
 }
 
-#_content div.figure-title {
+#_content .figure-title {
     padding: 10px;
     margin: 0;
     width: auto;
